--- a/probe/platformio.ini
+++ b/probe/platformio.ini
@@ -12,4 +12,7 @@
 platform = espressif8266
 board = huzzah
 framework = arduino
-lib_deps = seeed-studio/Seeed Arduino LSM6DS3@^2.0.4
+lib_deps = 
+	seeed-studio/Seeed Arduino LSM6DS3@^2.0.4
+	adafruit/Adafruit DPS310@^1.1.5
+	lennarthennigs/ESP Battery@^1.1.0
