--- a/probe/platformio.ini
+++ b/probe/platformio.ini
@@ -17,3 +17,6 @@ lib_deps =
 	adafruit/Adafruit DPS310@^1.1.5
 	khoih-prog/TimerInterrupt_Generic@^1.13.0
 	lennarthennigs/ESP Battery@^1.1.0
+monitor_speed = 115200
+monitor_filters = esp8266_exception_decoder, default
+build_type = debug
