--- a/gateway/platformio.ini
+++ b/gateway/platformio.ini
@@ -12,3 +12,7 @@
 platform = espressif8266
 board = huzzah
 framework = arduino
+
+monitor_speed = 115200
+monitor_filters = esp8266_exception_decoder, default
+build_type = debug
