--- a/gateway/platformio.ini
+++ b/gateway/platformio.ini
@@ -13,6 +13,9 @@ platform = espressif8266
 board = huzzah
 framework = arduino
 
+lib_deps =
+    core=symlink://../core
+
 monitor_speed = 115200
 monitor_filters = esp8266_exception_decoder, default
 build_type = debug
