--- a/pad/platformio.ini
+++ b/pad/platformio.ini
@@ -12,6 +12,4 @@
 platform = atmelavr
 board = uno
 framework = arduino
-lib_deps = 
-	dfrobot/DFRobot_MPX5700@^1.0.0
-	bblanchon/ArduinoJson@^7.4.1
+lib_deps = dfrobot/DFRobot_MPX5700@^1.0.0
