--- a/horizon/platformio.ini
+++ b/horizon/platformio.ini
@@ -12,10 +12,9 @@
 platform = espressif8266
 board = huzzah
 framework = arduino
-
-lib_deps =
-    core=symlink://../core
-
+lib_deps = 
+	core=symlink://../core
+	bblanchon/ArduinoJson@^7.4.1
 monitor_speed = 115200
 monitor_filters = esp8266_exception_decoder, default
 build_type = debug
