--- a/gateway/platformio.ini
+++ b/gateway/platformio.ini
@@ -8,14 +8,15 @@
 ; Please visit documentation for the other options and examples
 ; https://docs.platformio.org/page/projectconf.html
 
-[env:huzzah]
-platform = espressif8266
-board = huzzah
+[env:esp32-pico]
+platform = espressif32
+board = pico32
 framework = arduino
-
-lib_deps =
-    core=symlink://../core
-
+lib_deps = core=symlink://../core
 monitor_speed = 115200
-monitor_filters = esp8266_exception_decoder, default
+monitor_filters = 
+  esp32_exception_decoder
+  esp32_log_level_filter
+  default
 build_type = debug
+upload_port = /dev/ttyUSB0
