--- a/horizon/platformio.ini
+++ b/horizon/platformio.ini
@@ -8,13 +8,15 @@
 ; Please visit documentation for the other options and examples
 ; https://docs.platformio.org/page/projectconf.html
 
-[env:huzzah]
-platform = espressif8266
-board = huzzah
+[env:featheresp32-s2]
+platform = espressif32
+board = adafruit_feather_esp32s2
 framework = arduino
 lib_deps = 
 	core=symlink://../core
 	bblanchon/ArduinoJson@^7.4.1
+	arduino-libraries/NTPClient@^3.2.1
 monitor_speed = 115200
-monitor_filters = esp8266_exception_decoder, default
 build_type = debug
+upload_port = /dev/ttyACM0
+
