feat: Add I2C timeout configuration and improve data handling for I2C communication

--- a/horizon/platformio.ini
+++ b/horizon/platformio.ini
@@ -18,5 +18,4 @@ lib_deps =
 	arduino-libraries/NTPClient@^3.2.1
 monitor_speed = 115200
 build_type = debug
-upload_port = /dev/ttyACM0
-
+upload_port=/dev/ttyACM0
