--- a/horizon/platformio.ini
+++ b/horizon/platformio.ini
@@ -14,6 +14,7 @@ board = adafruit_feather_esp32s2
 framework = arduino
 lib_deps = 
 	core=symlink://../core
+	pocketbase=symlink://../../pocketbase-esp32
 	bblanchon/ArduinoJson@^7.4.1
 	arduino-libraries/NTPClient@^3.2.1
 monitor_speed = 115200
