--- a/pad/platformio.ini
+++ b/pad/platformio.ini
@@ -15,4 +15,5 @@ framework = arduino
 lib_deps = 
 	dfrobot/DFRobot_MPX5700@^1.0.0
 	symlink://../core
+	stevemarple/SoftWire@^2.0.10
 monitor_speed = 115200
