feat: Implement launch control and I2C data handling improvements [WIP]

--- a/pad/platformio.ini
+++ b/pad/platformio.ini
@@ -16,5 +16,6 @@ lib_deps =
 	dfrobot/DFRobot_MPX5700@^1.0.0
 	symlink://../core
 	stevemarple/SoftWire@^2.0.10
+	apechinsky/MemoryFree@^0.3.0
 monitor_speed = 115200
-upload_port = /dev/ttyACM2
+upload_port = /dev/ttyACM1
