fix: Update board and upload port settings for platformio configuration

--- a/horizon/platformio.ini
+++ b/horizon/platformio.ini
@@ -10,7 +10,7 @@
 
 [env:featheresp32-s2]
 platform = espressif32
-board = adafruit_feather_esp32s2
+board = pico32
 framework = arduino
 lib_deps = 
 	core=symlink://../core
@@ -19,4 +19,4 @@ lib_deps =
 	arduino-libraries/NTPClient@^3.2.1
 monitor_speed = 115200
 build_type = debug
-upload_port = /dev/ttyACM0
+upload_port = /dev/ttyUSB0
