--- a/gateway/platformio.ini
+++ b/gateway/platformio.ini
@@ -10,7 +10,7 @@
 
 [env:esp32-pico]
 platform = espressif32
-board = pico32
+board = adafruit_feather_esp32s2
 framework = arduino
 lib_deps = core=symlink://../core
 monitor_speed = 115200
@@ -19,4 +19,4 @@ monitor_filters =
   esp32_log_level_filter
   default
 build_type = debug
-upload_port = /dev/ttyUSB0
+upload_port = /dev/ttyACM0
