--- a/gateway/platformio.ini
+++ b/gateway/platformio.ini
@@ -8,15 +8,15 @@
 ; Please visit documentation for the other options and examples
 ; https://docs.platformio.org/page/projectconf.html
 
-[env:esp32-pico]
+[env:adafruit_feather_esp32s2]
 platform = espressif32
 board = adafruit_feather_esp32s2
 framework = arduino
 lib_deps = core=symlink://../core
 monitor_speed = 115200
 monitor_filters = 
-  esp32_exception_decoder
-  esp32_log_level_filter
-  default
+	esp32_exception_decoder
+	esp32_log_level_filter
+	default
 build_type = debug
-upload_port = /dev/ttyACM0
+upload_port = /dev/ttyACM1
