--- a/horizon/platformio.ini
+++ b/horizon/platformio.ini
@@ -8,7 +8,7 @@
 ; Please visit documentation for the other options and examples
 ; https://docs.platformio.org/page/projectconf.html
 
-[env:featheresp32-s2]
+[env:pico32]
 platform = espressif32
 board = pico32
 framework = arduino
@@ -20,3 +20,4 @@ lib_deps =
 monitor_speed = 115200
 build_type = debug
 upload_port = /dev/ttyUSB0
+monitor_filters = esp32_exception_decoder
